# skill-forge

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py  agent.py  config.py  main.py  models.py  skill_registry.py  skill_tools.py
backend/app/engines/: __init__.py  agent_framework.py  base.py  byom.py  copilot_sdk.py  copilot_sdk_byom.py  handrolled.py
backend/tests/: test_skill_registry.py
docs/: ENGINES.md  THE-PATTERN.md
scripts/: README.md  index_zava.py
scripts/zava_ingest/: __init__.py  chunking.py  docs.py  embeddings.py  search_index.py
scripts/zava_ingest/extractors/: __init__.py  _pagebreak.py  content_understanding.py  doc_intelligence.py  pypdf_extract.py
skills/rag-search/: SKILL.md  tool.py
skills/web-grounding/: SKILL.md  tool.py
web/: index.html
